  [Michele Simionato]
  * Fixed exporting-reimporting GMFs in hdf5 format
  * Fixed a bug causing the insured losses to be larger than the
    ground losses in some cases
  * Added command `oq info executing`
  * Added `extract/relevant_gmfs?threshold=` functionality
  * Added `extract/ruptures?threshold=` functionality
  * Disabling the DbServer with dbserver.host = local
  * Fixed `disagg_source` for same ID sources
  * Disambiguated same ID sources by appending the file name after
    the exclamation mark and fixed disagg_by_src accordingly
  * Fixed another bug in disaggregation for mutex sources
  * Fixed a bug in `disagg_source` for mutex sources: src_mutex
    was not passed
  * Internal: forced the colon convention on mutex sources
  * Fixed a bug in the disaggregation with mutex sources incorrectly
    averaging over the rates and not the poes

python3-oq-engine (3.18.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Fixed the command `oq extract ruptures` producing wrong newlines on
    Windows

  [Paolo Tormene, Michele Simionato]
  * Fixed an ordering bug in the tagnames in `extract_agg_curves` breaking
    the QGIS plugin

  [Michele Simionato]
  * Fixed the function `get_mean_stddevs_cy14` to recover the same results
    for the Canada SHM6 model as in engine 3.11
  * Required at least Python 3.10.6 on mac and windows

  [Claudio Schill]
  * Optimized the Kuehn sigma_mu_adjustment calculation by replacing the
    multi-step interpolation with a single 2D/3D space interpolation

  [Michele Simionato]
  * Fixed a bug in calculations with a filtered site collection using the
    HM2018CorrelationModel
  * Internal: raised a clear error message when get_composite_source_model is
   called without passing a datastore in presence of multifault sources

  [Christopher Brooks]
  * Added non-ergodic implementation of Zhao et al. (2016) GMM (ray-tracing
    of travel paths through anelastically attenuating volcanic regions and